# ida

./: .gitignore  ANALIZ_RAPORU.md  DERIN_REPO_ANALIZ_RAPORU.md  GAZEBO_REFACTORING_ANALIZ_RAPORU.md  KTR_Yazilim_Bolumu_Taslak.docx  KTR_Yazilim_Bolumu_Taslak_v2.docx  MAIN_ALGORITMA_FARK_ANALIZI.md  OTONOMI_ALGORITMA_ANALIZ_RAPORU.md  PROJE_KOD_RAPORU.md  README.md  VRX_SIMULASYON_PLANI.md  handoff.md
src/ida_gazebo/: CMakeLists.txt  package.xml
src/ida_gazebo/launch/: test_ida_model.launch.py  vrx_parkur1_sim.launch.py
src/ida_gazebo/models/ida_katamaran/: model.config  model.sdf
src/ida_gazebo/scripts/: cmd_vel_to_thrust.py  mission_eval_node.py  mission_start_gate.py  motor_thrust_viewer.py  sim_buoy_detector.py  sim_nav_converter.py  spawn_course_objects.py  spawn_waypoint_markers.py
src/ida_otonom/: .flake8  lidar_processor_node.py  package.xml  sensor_fusion_node.py  setup.cfg  setup.py
src/ida_otonom/config/: ida_real.yaml  ida_sim.yaml  parkur1_sim.yaml  parkur2_sim.yaml  parkur3.yaml  parkur3_sim.yaml  unified_sim.yaml
src/ida_otonom/ida_otonom/: beyin_node.py  buoy_detector_node.py  color_buoy_finder_node.py  color_receiver_node.py  common.py  control_dashboard_node.py  controller_node.py  corridor_tracker_node.py  course_memory_node.py  geofence_monitor_node.py  gps_guidance_node.py  gps_node.py  lidar_node.py  lidar_processor_node.py  local_costmap_node.py  logger_node.py  mavros_bridge_node.py  mission_manager_node.py  parkur2_planner_node.py  parkur2_sim_node.py  parkur3_planner_node.py  parkur_editor_node.py  perception_node.py  safety_node.py  (+13 more)
src/sllidar_ros2/: CMakeLists.txt
(+31 files in other folders)
